# AdminPanelDjango

./: README.md  nginx.conf  pyproject.toml  requirements.txt
django_admin/: admin.py
